<resources>
    <string name="app_name">G2_1000_golden_days</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>

    <string name="title_Recipes">Recipes</string>
    <string name="recipe_pregnant_woman">Recipes for pregnant woman</string>
    <string name="recipe_for_mothers">Recipes for mothers</string>
    <string name="recipe_for_children">Recipes for children</string>

    <string name="title_health">Health</string>
    <string name="generalhealth">General health information</string>
    <string name="Pregnancy">Pregnancy</string>
    <string name="months_0to6">0–6 months</string>
    <string name="months_6to9">6–9 months</string>
    <string name="months_9to12">9–12 months</string>
    <string name="months_12to24">12–24 months</string>

    <string name="title_garden">Garden</string>
    <string name="button" translatable="false">Button</string>
    <string name="hello_add_weight_adder" translatable="false">Hello add weight adder</string>
    <string name="garden">Garden</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="next_doctors_appointment">Next doctors appointment</string>
    <string name="tomato">Tomato</string>
    <string name="welcome">Welcome</string>
    <string name="doctor_appointment">Doctor Appointments</string>
    <string name="add_doctor_appointment">Add Doctor Appointments +</string>

    <string name="choose_language">Choose Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="recipesTranslate" translatable="false">3</string>
    <string name="_1000_golden_days">1000 golden days</string>
    <string name="health">Health</string>
    <string name="How_to_plant_in_my_garden">How to plant in my garden</string>
    <string name="cauliflower">Cauliflower</string>
    <!--    Translate later-->
    <string name="healthy_veggies">Healthy veggies</string>
    <string name="doctor_appointments">Doctor Appointments</string>
    <string name="preparing_the_soil">Preparing the soil</string>
    <string name="how_to_make_compost">How to make compost</string>
    <string name="how_to_water_crops">How to water crops</string>
    <string name="what_to_grow_in_the_garden">What to grow in the garden</string>
    <string name="save_date">Save Date</string>
    <string name="my_doctor_appointments">My Doctor Appointments</string>
    <string name="cabbage_is_rich_in_vitamin_k">Cabbage: is rich in Vitamin k</string>
    <string name="tomato_is_rich_in_vitamin_a_c">Tomato: is rich in Vitamin A + C</string>
    <string name="carrot_is_rich_in_vitamin_a">Carrot: is rich in Vitamin A</string>
    <string name="sarg_it_is_healthy_and_easy_and_grows_all_year_around">Sarg: It is healthy and easy and grows all year around.</string>
    <string name="pumpkin_rich_in_vitamin_a">Pumpkin: Rich in vitamin A</string>
    <string name="onion_needed_for_most_foods_needs_frequent_watering">Onion: Needed for most foods. Needs frequent watering.</string>
    <string name="cauliflower_it_helps_in_heart_disease_it_has_choline_and_sulforaphane">Cauliflower : it helps in Heart disease. It has Choline and Sulforaphane.</string>
    <string name="cabbage_it_is_rich_in_vitamin_k">Cabbage : It is rich in Vitamin K.</string>
    <string name="bitter_gourd_it_helps_in_lowering_blood_pressure">Bitter gourd : It helps in lowering blood pressure.</string>
    <string name="tomato_it_is_rich_in_vitamin_a_and_c">Tomato : it is rich in Vitamin A and C</string>
    <string name="carrot_it_is_rich_in_vitamin_a">Carrot : It is rich in Vitamin A</string>
    <string name="cucumber_it_is_rich_in_vitamin_k">Cucumber : it is rich in Vitamin K</string>
    <string name="eggplant_it_is_rich_in_minerals_and_fibers">Eggplant : it is rich in minerals and fibers</string>
    <string name="suggestions_for_what_to_grow_in_your_garden">Suggestions for what to grow in your garden</string>
    <string name="how_to_make_a_garden">How to make a garden</string>
    <string name="_1_dig_the_soil_to_make_it_loose">1. Dig the soil to make it loose</string>
    <string name="_2_prepare_the_soil_mix_compost_with_soil_add_compost_in_soil_and_leave_it_for_8_to_10_days">2. Prepare the soil: mix compost with soil add compost in soil and leave it for 8 to 10 days</string>
    <string name="_3_moisturize_the_soil">3. Moisturize the soil</string>
    <string name="_4_soil_be_prepared_in_8_to_10_days">4. Soil be prepared in 8 to 10 days</string>
    <string name="_5_then_make_a_high_land_for_the_crops_growing">5. Then make a high land for the crops growing</string>

    <string name="general_health_info">General health info</string>
    <string name="_6_9_months">6-9 months</string>
    <string name="_9_12_months">9-12 months</string>
    <string name="doctor">Doctor</string>
    <string name="title_doctor_appointments">Doctor</string>
    <string name="Compost_title">How to make compost</string>
    <string name="Compost_Step1">Compost size of 2m*2m</string>
    <string name="Compost_Step2">To make compost we need Cow’s urine, leaves, bushes with leaves, ash and Cow dung (Make a pit according to how much land you have)</string>
    <string name="Compost_Step3">Put layer by layer elements in the pit, firstly, put Bushes with leaves then cow dung, then Urine and ash. repeat until the pit is full</string>
    <string name="Compost_Step4">Put a stick that reaches the bottom of the pit and cover it with Soil</string>
    <string name="Compost_Step5">Your compost Pit will be ready in 30 to 35 days</string>
</resources>