<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sunmadinepal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.example.sunmadinepal.ui.health.HealthFragment"
        android:label="@string/title_health"
        tools:layout="@layout/health" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.sunmadinepal.ui.recipes.RecipesFragment"
        android:label="@string/title_Recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@id/navigation_garden"
        android:name="com.example.sunmadinepal.ui.garden.GardenFragment"
        android:label="@string/title_garden"
        tools:layout="@layout/fragment_garden"
        />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.sunmadinepal.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >

    </fragment>

</navigation>
